manifests/watchtower/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: identity
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
